--- a/src/js/_locationNewYork.html
+++ b/src/js/_locationNewYork.html
@@ -1,1 +1,3 @@
+<h3 class="place">New York</h3>
+
 John F. Kennedy airport is busiest in U.S. for international arrivals, according to Airports Council International.
