--- a/src/js/_locationBlaine.html
+++ b/src/js/_locationBlaine.html
@@ -1,1 +1,3 @@
+<h3 class="place">Blaine, Wash.</h3>
+
 Some people cross 0 Avenue, the long, unfenced Canadian street along the border. Peace Arch Park, accessible from both sides of the border, is another popular crossing spot.
