with chatter at top

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <responsive-child>
       <main class="interactive">
         <div class="title">Seeking asylum in Canada</div>
-        <!-- <div class="chatter"></div> -->
+        <div class="chatter">Here’s an example of a path some asylum seekers take through Washington state. Some say they use the U.S. as a steppingstone because it’s easier to get a visitor visa to this country than to Canada.</div>
         
         <div class="interactive-container">
           <div class="sidebar" data-index="0">
-            <h3 class="place"></h3>
+            <h3 class="place">Erbil, Iraq</h3>
             <div class="next-location">
-              Here’s an example of a path an asylum seeker might take through Washington state. Some say they use the U.S. as a stepping stone because it’s easier to get a visitor visa to this country than to Canada.
+              Erbil is Iraqi Kurdistan's capital. Iraq and Afghanistan are among the top source countries for asylum seekers in British Columbia, according to aid organizations who work in B.C. Others include Honduras, Colombia, Guatemala, Burundi and Nigeria.
             </div>
 
             <div class="buttons">
@@ -25,7 +25,7 @@
           </div>
 
           <div class="map-container">
-            <leaflet-map>
+            <leaflet-map fixed>
               <tile-layer layer="cartoPositron"></tile-layer>
             </leaflet-map>
           </div>
